fix android adapter

--- a/sample/AutoCompleteEntry.Sample/Views/WithEventsPage.xaml
+++ b/sample/AutoCompleteEntry.Sample/Views/WithEventsPage.xaml
@@ -20,7 +20,8 @@
                                     TextMemberPath="Country"
                                     DisplayMemberPath="Country"
                                     TextChanged="AutoCompleteEntry_TextChanged"
-                                    SuggestionChosen="AutoCompleteEntry_SuggestionChosen"/>
+                                    SuggestionChosen="AutoCompleteEntry_SuggestionChosen"
+                                    HeightRequest="50"/>
         
             <Frame BorderColor="Gray" 
                    BackgroundColor="LightGray" 
