Fix Completed event not firing
Issue:
- Since AutoCompleteEntry derives from Entry, it should fire the Completed event when user pressed check mark button on on-screen keyboard (Android), Enter (Windows), etc

Changes:
1. Android:
- Plumb EditorAction to Handler, and call OnEditorAction same as MAUI's Entry handler to ensure Completed is fired.

2. Windows:
- Handle same as Entry on Windows.

3. iOS/MacCatalyst:
- Plumb ShouldReturn same as Entry on iOS, invoke SendCompleted.

4. Sample:
- Ensure we receive Completed events and use that to "select" an item that matches exactly.

--- a/sample/AutoCompleteEntry.Sample/Views/WithBindingsPage.xaml
+++ b/sample/AutoCompleteEntry.Sample/Views/WithBindingsPage.xaml
@@ -20,7 +20,8 @@
                                     TextMemberPath="Country"
                                     DisplayMemberPath="Country"
                                     TextChangedCommand="{Binding TextChangedCommand}"
-                                    SelectedSuggestion="{Binding SelectedItem}"/>
+                                    SelectedSuggestion="{Binding SelectedItem}"
+                                    Completed="AutoCompleteEntry_Completed"/>
 
             <Frame BorderColor="Gray" 
                    BackgroundColor="LightGray" 
