Implement CursorPosition TwoWay binding for iOS

--- a/sample/AutoCompleteEntry.Sample/Views/WithEventsPage.xaml
+++ b/sample/AutoCompleteEntry.Sample/Views/WithEventsPage.xaml
@@ -37,6 +37,7 @@
                                     TextMemberPath="Country"
                                     DisplayMemberPath="Country"
                                     TextChanged="AutoCompleteEntry_TextChanged"
+                                    CursorPosition="{Binding CursorPosition, Mode=TwoWay}"
                                     CursorPositionChanged="AutoCompleteEntry_CursorPositionChanged"
                                     SuggestionChosen="AutoCompleteEntry_SuggestionChosen"
                                     HeightRequest="50"/>
