17 cursorposition is always 0 and user cannot continue in typing in the middle of the text (#23)
* Avoid setting cursor to last position when writing in text field

* Implement CursorPosition mapping for OneWay binding

* Implement CursorPosition TwoWay binding for Android

* Implement CursorPosition TwoWay binding for iOS

* Fix broken code from merge

* Implement CursorPosition TwoWay binding for Mac

* Fix code merging issues

* Fix merge issues

* Try to avoid memory leaks when disconnecting from autocomplete entries

* fix further merge issues

* Set version 3.0.5

--- a/sample/AutoCompleteEntry.Sample/Views/WithEventsPage.xaml
+++ b/sample/AutoCompleteEntry.Sample/Views/WithEventsPage.xaml
@@ -3,7 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:zoft="http://zoft.MauiExtensions/Controls"
              xmlns:ctkm="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
-             x:Class="AutoCompleteEntry.Sample.Views.WithEventsPage">
+             xmlns:vm="clr-namespace:AutoCompleteEntry.Sample.ViewModels"
+             x:Class="AutoCompleteEntry.Sample.Views.WithEventsPage"
+             x:DataType="vm:SampleViewModel">
 
     <ContentPage.Resources>
         <ctkm:IsNotNullConverter x:Key="IsNotNullConverter"/>
@@ -15,11 +17,28 @@
                HorizontalOptions="Center" />
 
         <VerticalStackLayout Spacing="10" Margin="10">
+            
+            <Label>
+                <Label.FormattedText>
+                    <FormattedString>
+                        <Span Text="CursorPosition: " />
+                        <Span Text="{Binding CursorPosition}"/>
+                    </FormattedString>
+                </Label.FormattedText>
+            </Label>
+
+            <HorizontalStackLayout>
+                <Button Text="Set CursorPosition" Command="{Binding SetCursorPositionCommand}"/>
+                <Entry Text="{Binding NewCursorPosition, Mode=TwoWay}" Keyboard="Numeric"/>
+            </HorizontalStackLayout>
+            
             <zoft:AutoCompleteEntry Placeholder="Search for a country or group"
                                     ItemsSource="{Binding FilteredList}"
                                     TextMemberPath="Country"
                                     DisplayMemberPath="Country"
                                     TextChanged="AutoCompleteEntry_TextChanged"
+                                    CursorPosition="{Binding CursorPosition, Mode=TwoWay}"
+                                    CursorPositionChanged="AutoCompleteEntry_CursorPositionChanged"
                                     SuggestionChosen="AutoCompleteEntry_SuggestionChosen"
                                     Completed="AutoCompleteEntry_Completed"
                                     HeightRequest="50"/>
@@ -39,6 +58,7 @@
                     </HorizontalStackLayout>
                 </VerticalStackLayout>
             </Frame>
+            
         </VerticalStackLayout>
     </Grid>
 
