--- a/sample/AutoCompleteEntry.Sample/Views/WithBindingsPage.xaml
+++ b/sample/AutoCompleteEntry.Sample/Views/WithBindingsPage.xaml
@@ -40,7 +40,7 @@
                                     CursorPosition="{Binding CursorPosition, Mode=TwoWay}"
                                     SelectedSuggestion="{Binding SelectedItem}"
                                     Completed="AutoCompleteEntry_Completed"
-                                    ClearButtonVisibility="WhileEditing"
+                                    ClearButtonVisibility="Never"
                                     HeightRequest="50"/>
 
             <Frame BorderColor="Gray" 
