Update sample to have binding to text with initialized value

--- a/sample/AutoCompleteEntry.Sample/Views/WithBindingsPage.xaml
+++ b/sample/AutoCompleteEntry.Sample/Views/WithBindingsPage.xaml
@@ -31,9 +31,19 @@
                 <Button Text="Set CursorPosition" Command="{Binding SetCursorPositionCommand}"/>
                 <Entry Text="{Binding NewCursorPosition, Mode=TwoWay}" Keyboard="Numeric"/>
             </HorizontalStackLayout>
+
+            <Label>
+                <Label.FormattedText>
+                    <FormattedString>
+                        <Span Text="Text: " />
+                        <Span Text="{Binding Text}"/>
+                    </FormattedString>
+                </Label.FormattedText>
+            </Label>
             
             <zoft:AutoCompleteEntry Placeholder="Search for a country or group"
                                     ItemsSource="{Binding FilteredList}"
+                                    Text="{Binding Text}"
                                     TextMemberPath="Country"
                                     DisplayMemberPath="Country"
                                     TextChangedCommand="{Binding TextChangedCommand}"
