Add No Border tab and related view
- Introduced a new tab titled "No Border" in the app shell.
- Created a new XAML page for the No Border feature with bindings.
- Added code-behind to handle user interactions and data binding for the AutoCompleteEntry control.
- Updated project file to include references for the new view.

--- a/sample/AutoCompleteEntry.Sample/AppShell.xaml
+++ b/sample/AutoCompleteEntry.Sample/AppShell.xaml
@@ -13,6 +13,9 @@
         <Tab Title="With Bindings">
             <ShellContent ContentTemplate="{DataTemplate views:WithBindingsPage}" />
         </Tab>
-    </TabBar>
+		<Tab Title="No Border">
+			<ShellContent ContentTemplate="{DataTemplate views:WithBindingsPage}" />
+		</Tab>
+	</TabBar>
     
 </Shell>
