Add support for Android ItemTemplate
Taken from the existing PR of @david-d-le
https://github.com/zleao/zoft.MauiExtensions.AutoCompleteEntry/issues/28

--- a/sample/AutoCompleteEntry.Sample/Views/WithBindingsPage.xaml
+++ b/sample/AutoCompleteEntry.Sample/Views/WithBindingsPage.xaml
@@ -62,7 +62,24 @@
                 ShowBottomBorder="{Binding ShowBottomBorder}"
                 Text="{Binding Text}"
                 TextChangedCommand="{Binding TextChangedCommand}"
-                TextMemberPath="Country" />
+                TextMemberPath="Country">
+                <zoft:AutoCompleteEntry.ItemTemplate>
+                    <DataTemplate x:DataType="vm:ListItem">
+                        <Grid ColumnDefinitions="auto, *">
+                            <Label
+                                Grid.Column="0"
+                                BackgroundColor="Red"
+                                FontSize="Large"
+                                Text="{Binding Group}" />
+                            <Label
+                                Grid.Column="1"
+                                BackgroundColor="Yellow"
+                                FontSize="Large"
+                                Text="{Binding Country}" />
+                        </Grid>
+                    </DataTemplate>
+                </zoft:AutoCompleteEntry.ItemTemplate>
+            </zoft:AutoCompleteEntry>
 
             <Frame
                 BackgroundColor="LightGray"
