--- a/sample/AutoCompleteEntry.Sample/Views/WithEventsPage.xaml
+++ b/sample/AutoCompleteEntry.Sample/Views/WithEventsPage.xaml
@@ -55,12 +55,13 @@
                 TextChanged="AutoCompleteEntry_TextChanged"
                 TextMemberPath="Country" />
 
-            <Frame
+            <Border
                 BackgroundColor="LightGray"
-                BorderColor="Gray"
                 HorizontalOptions="Start"
-                IsVisible="{Binding SelectedItem, Converter={StaticResource IsNotNullConverter}}">
-                <VerticalStackLayout>
+                IsVisible="{Binding SelectedItem, Converter={StaticResource IsNotNullConverter}}"
+                Stroke="Gray"
+                StrokeShape="RoundRectangle 8">
+                <VerticalStackLayout Padding="10">
                     <HorizontalStackLayout Spacing="5">
                         <Label Text="Group:" />
                         <Label FontAttributes="Bold" Text="{Binding SelectedItem.Group}" />
@@ -70,7 +71,7 @@
                         <Label FontAttributes="Bold" Text="{Binding SelectedItem.Country}" />
                     </HorizontalStackLayout>
                 </VerticalStackLayout>
-            </Frame>
+            </Border>
 
         </VerticalStackLayout>
     </Grid>
