--- a/sample/AutoCompleteEntry.Sample/App.xaml
+++ b/sample/AutoCompleteEntry.Sample/App.xaml
@@ -1,8 +1,9 @@
-﻿<?xml version = "1.0" encoding = "UTF-8" ?>
-<Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:AutoCompleteEntry.Sample"
-             x:Class="AutoCompleteEntry.Sample.App">
+﻿<?xml version="1.0" encoding="UTF-8" ?>
+<Application
+    x:Class="AutoCompleteEntry.Sample.App"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:local="clr-namespace:AutoCompleteEntry.Sample">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
