--- a/sample/AutoCompleteEntry.Sample/Views/WithBindingsPage.xaml
+++ b/sample/AutoCompleteEntry.Sample/Views/WithBindingsPage.xaml
@@ -61,7 +61,7 @@
                 SelectedSuggestion="{Binding SelectedItem}"
                 ShowBottomBorder="{Binding ShowBottomBorder}"
                 Text="{Binding Text}"
-                TextChangedCommand="{Binding TextChangedCommand}"
+                AutoCompleteTextChangedCommand="{Binding TextChangedCommand}"
                 TextMemberPath="Country">
                 <zoft:AutoCompleteEntry.ItemTemplate>
                     <DataTemplate x:DataType="vm:ListItem">
