Revert "Update sample"
This reverts commit c9637d68691a22460c74f8585eb94190b9b02027.

--- a/sample/AutoCompleteEntry.Sample/Views/WithBindingsPage.xaml
+++ b/sample/AutoCompleteEntry.Sample/Views/WithBindingsPage.xaml
@@ -61,7 +61,7 @@
                 SelectedSuggestion="{Binding SelectedItem}"
                 ShowBottomBorder="{Binding ShowBottomBorder}"
                 Text="{Binding Text}"
-                AutoCompleteTextChangedCommand="{Binding TextChangedCommand}"
+                TextChangedCommand="{Binding TextChangedCommand}"
                 TextMemberPath="Country">
                 <zoft:AutoCompleteEntry.ItemTemplate>
                     <DataTemplate x:DataType="vm:ListItem">
